# efrei_rustsim

./: Cargo.toml  SPEC.md  config.toml  dev-plan.md  rust-projet.md
src/: base.rs  config.rs  main.rs  map.rs  robot.rs  robots.rs  ui.rs  world.rs
