[package]
name = "resource-sim"
version = "0.1.0"
description = "Resource collection simulation with autonomous robots (EFREI Rust project)"
authors = ["Araden14 <arnaud-danselme@hotmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.29.0"
ratatui = "0.30.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
rand = "0.9"
noise = "0.9"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
